--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "*",
     "react-spinners": "^0.13.8",
     "stream-browserify": "^3.0.0",
     "typescript": "^4.9.5",
